# fashion

./: .env.example  .pre-commit-config.yaml  Dockerfile  HOMEPAGE_ADMIN_GUIDE.md  MEGA_MENU_GUIDE.txt  MULTIVENDOR_HOMEPAGE_SETUP.md  MULTIVENDOR_IMPLEMENTATION.md  Makefile  QUICKSTART.md  README.md  SALES_MANAGEMENT_GUIDE.txt  add_featured_items.py  create_all_icons.py  create_homepage_images.py  create_missing_images.py  create_placeholder_images.py  create_pwa_icons.py  create_vendor_group.py  db.sqlite3  debug_categories.py  docker-compose.yml  docker-entrypoint.sh  fix_mega_menu.py  manage.py  populate_homepage_data.py  pyproject.toml  pytest.ini  requirements-local.txt  requirements.txt  run_tests.py  setup_local.py  setup_mega_menu.py  test_local.py  test_report.py
.claude/: settings.local.json
cart/: admin.py  apps.py  context_processors.py  forms.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
cart/api/: __init__.py  urls.py  views.py
cart/migrations/: 0001_initial.py  0002_initial.py
core/: __init__.py  admin.py  admin_customization.py  apps.py  context_processors.py  decorators.py  forms.py  homepage_admin.py  managers.py  middleware.py  models.py  signals.py  sitemaps.py  tasks.py  tests.py  urls.py  utils.py  views.py
core/migrations/: 0001_initial.py  0002_homepage_models.py  0003_remove_featured_models.py
core/templatetags/: math_filters.py
fixtures/: sample_data.json
nexus/: __init__.py  admin.py  analytics.py  api.py  cache.py  celery.py  constants.py  context_processors.py  decorators.py  exceptions.py  factories.py  filters.py  forms.py  i18n.py  local_settings.py  managers.py  middleware.py  mixins.py  monitoring.py  notifications.py  pagination.py  payments.py  permissions.py  queries.py  search.py  security.py  seo.py  serializers.py  services.py  settings.py  signals.py  storage.py  tasks.py  tests.py  urls.py  utils.py  validators.py
nginx/conf.d/: nexus.conf
products/: __init__.py  admin.py  admin_vendor.py  analytics.py  api.py  apps.py  cache.py  constants.py  context_processors.py  decorators.py  exceptions.py  factories.py  filters.py  forms.py  i18n.py  managers.py  middleware.py  mixins.py  models.py  monitoring.py  notifications.py  pagination.py  permissions.py  queries.py  search.py  security.py  seo.py  serializers.py  services.py  signals.py  sitemaps.py  storage.py  tasks.py  tests.py  urls.py  utils.py  validators.py  vendor_admin.py  vendor_models.py  views.py
products/api/: __init__.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_add_vendor_fields.py  0003_vendor_models.py  0004_featured_models.py  0005_remove_vendorpayout_vendor_remove_vendorprofile_user_and_more.py  0006_category_mega_menu_column_title_and_more.py
sales/: admin.py  apps.py  models.py
sales/migrations/: 0001_initial.py
static/css/: myntra-style.css  style.css
static/images/: create_placeholders.py
static/js/: main.js
staticfiles/: manifest.json  robots.txt
staticfiles/css/: fashion-style.css  myntra-style.css  style_new.css
staticfiles/js/: main.js  service-worker.js
templates/: base.html  sitemap.xml
templates/cart/: cart_detail.html  cart_detail_enhanced.html  checkout.html  wishlist.html
templates/components/: loading_spinner.html  product_card.html
templates/core/: 400.html  403.html  404.html  500.html  about.html  blog.html  contact.html  debug_images.html  home.html  maintenance.html  offline.html
templates/products/: brand_detail.html  category_detail.html  product_detail.html  product_list.html
templates/users/: address_form.html  login.html  order_detail.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  profile.html  register.html
users/: admin.py  apps.py  forms.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
users/api/: __init__.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_add_vendor_fields.py  0003_customer_vendor.py  0004_delete_customer_delete_vendor.py
